--- a/Personal Page.html
+++ b/Personal Page.html
@@ -79,16 +79,47 @@ body {
 	.sidebox2:hover {
 		opacity: 1;
 	}
+
+	.sidebox3 {
+		position: absolute;
+		border: 1px solid black;
+		height: 500px;
+		width: 500px;
+		margin-top: 520px;
+		opacity: 0.1;
+	}
+
+	.sidebox3:hover {
+		opacity: 1;
+	}
+	.sidebox4 {
+		position: absolute;
+		border: 1px solid black;
+		height: 500px;
+		width: 500px;
+		margin-top: 520px;
+		margin-left: 1380px;
+		opacity: 0.1;
+	}
+	.sidebox4:hover {
+		opacity: 1;
+	}
 </style>
 	<title>Personal Page</title>
 </head>
 <body>
 <h1>I am M1cha3l B0ld3n</h1>
 <div class="sidebox1">
-	<img src="https://s-media-cache-ak0.pinimg.com/736x/57/ae/9a/57ae9a373318e844c4e5732f09e5acb8.jpg" width="500" height="500"> </div>
+	<img src="https://s-media-cache-ak0.pinimg.com/736x/57/ae/9a/57ae9a373318e844c4e5732f09e5acb8.jpg" width="500" height="500"> </img>
 </div>
 <div class="sidebox2">
-	<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=116961570" width="500" height="500"> </div>
+	<img src="https://lh3.googleusercontent.com/c8yGHlic6DpTtWJJxuYbNjQSxYkwDxmu3-uZUqvBvdIvFZt0dbl9jhsn5hpOBWdqZIxJ=w300" width="500" height="500"> </img>
+</div>
+<div class="sidebox3">
+	<img src="https://s-media-cache-ak0.pinimg.com/originals/a7/d3/b6/a7d3b6938ae83cc173be3ca315fc4c4c.jpg" width="500" height="500"> </img>	
+</div>
+<div class="sidebox4">
+<img src="http://images.forwallpaper.com/files/images/e/e68a/e68ad0dc/406303/touwa-erio-blue-hair.jpg" width="500" height="500"> </img>
 </div>
 <div class="Box1">
 <div class="Textbox1">
